# live-engine

./: .gitignore  Cargo.toml  README.md
apps/livewall-service/: Cargo.toml
apps/livewall-service/src/: bootstrap.rs  main.rs
apps/livewall-settings/: Cargo.toml  build.rs
apps/livewall-settings/src/: app.rs  main.rs  settings.slint  ui.rs
crates/livewall-control/: Cargo.toml
crates/livewall-control/src/: lib.rs
crates/livewall-control/tests/: ipc_contract.rs
crates/livewall-desktop/: Cargo.toml
crates/livewall-desktop/src/: lib.rs  monitors.rs  workerw.rs
crates/livewall-desktop/tests/: desktop_model.rs
crates/livewall-engine/: Cargo.toml
crates/livewall-engine/src/: lib.rs  policy.rs  runtime.rs
crates/livewall-engine/tests/: policy_tests.rs
crates/livewall-pack/: Cargo.toml
crates/livewall-pack/src/: install.rs  lib.rs  manifest.rs
crates/livewall-pack/tests/: manifest_tests.rs
crates/livewall-render/: Cargo.toml
crates/livewall-render/src/: device.rs  lib.rs  scene.rs
crates/livewall-render/tests/: scene_config.rs
crates/livewall-video/: Cargo.toml
crates/livewall-video/src/: clock.rs  lib.rs  player.rs
crates/livewall-video/tests/: clock_tests.rs
docs/: architecture.md
docs/plans/: 2026-04-29-live-wallpaper-v1.md
scripts/: package-release.ps1  smoke-test.ps1
wallpapers/samples/aurora-scene/: manifest.json
wallpapers/samples/aurora-scene/shaders/: aurora.ps.cso  fullscreen.vs.cso
wallpapers/samples/coast-video/: manifest.json
