[package]
name = "livewall-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
readme = "README.md"

[lib]
path = "README.md"

[lints]
workspace = true

[workspace]
members = [
    ".",
    "apps/livewall-service",
    "apps/livewall-settings",
    "crates/livewall-control",
    "crates/livewall-pack",
    "crates/livewall-desktop",
    "crates/livewall-render",
    "crates/livewall-video",
    "crates/livewall-engine",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.metadata.livewall]
target_os = "windows-11"
planned_members = [
    "apps/livewall-service",
    "apps/livewall-settings",
    "crates/livewall-control",
    "crates/livewall-pack",
    "crates/livewall-desktop",
    "crates/livewall-render",
    "crates/livewall-video",
    "crates/livewall-engine",
]
wallpaper_kinds_v1 = ["video", "scene"]
