[package]
name = "livewall-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
livewall-control = { path = "../../crates/livewall-control" }
livewall-desktop = { path = "../../crates/livewall-desktop" }
livewall-engine = { path = "../../crates/livewall-engine" }
livewall-pack = { path = "../../crates/livewall-pack" }
livewall-render = { path = "../../crates/livewall-render" }
livewall-video = { path = "../../crates/livewall-video" }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
