[package]
name = "livewall-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
livewall-control = { path = "../../crates/livewall-control" }
serde_json.workspace = true
slint.workspace = true
thiserror.workspace = true

[build-dependencies]
slint-build = "1.6"

[lints]
workspace = true
