[package]
name = "livewall-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
livewall-pack = { path = "../livewall-pack" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
