[package]
name = "livewall-video"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
livewall-pack = { path = "../livewall-pack" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
